testsuite/tests/properties/invalid_n_propgate/bad_arity_2_1.lkt
import common

class BarNode: FooNode {
    @ignored fun main_prop(): Equation =
        %propagate(node.ref_var, BazNode.prop3, node.type_var)
}
